# ARC-FFF

./: .gitignore  README.md  agent_creation_skill.md  check.py  check_config.py  check_fields.py  check_parts.py  check_tool_fields.py  pyproject.toml
app/: __init__.py  main.py  test_prop.py
app/arc/agents/: live_agent.py  orchestrator.py  session_controller.py
app/arc/agents/mark/: __init__.py  agent.py  prompts.py
app/arc/core/: audio.py  config.py  shared_memory.py
app/arc/shared/: __init__.py  session_bus.py
app/arc/subagents/: __init__.py
app/arc/subagents/computer_use/: __init__.py  agent.py  callbacks.py  executor.py  memory.py  status_pill.py
app/arc/subagents/image_generation/: __init__.py  agent.py
app/arc/ui/: agent_creator.py  main_window.py
app/arc/ui/widgets/: controls.py  event_console.py  gemini_tile.py  transcript_panel.py  user_tile.py
app/arc/web/: livekit_bridge.py  ws_server.py
tests/: test_safety_settings.py  test_session_bus.py  test_shared_log.py
voice_agent/: .env.example  Procfile  agent.py  requirements.txt  test_livekit.py  token_server.py
web/: README.md  next.config.mjs  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/livekit/: route.ts
web/app/debug/: page.tsx
